--- a/content/labs/lab03.textile
+++ b/content/labs/lab03.textile
@@ -203,6 +203,36 @@ h4. Using Multiple Pointers
 
 "See my example":http://people.eecs.ku.edu/~jvalland/files/lab03/pointers.cpp (mostly from the book) for more experience with pointers.
 
+h2. Using putback to replace content on an input stream
+
+<pre>
+  <code>
+    string command, event_name;
+  	int position;
+
+  	while (fin >> command)
+  	{
+  		if (command == "new-contestant")
+  		{
+  			fin >> event_name;
+
+  			// Find next character
+  			char check_position;
+  			fin >> check_position;
+
+  			// Replace character
+  			fin.putback(check_position);
+
+  			// Read in position
+  			if (isdigit(check_position)) fin >> position;
+  			else position = 0;
+  			
+  			//...
+			}
+		}
+  </code>
+</pre>
+
 h2. Notes on insert method
 
 <pre>
