--- a/content/labs/lab06.textile
+++ b/content/labs/lab06.textile
@@ -13,9 +13,7 @@ h1. Lab 06
 
 h2. Random Number Generation
 
-Simple random numbers can be created with the %rand()% function.  Because we are comparing multiple sorting algorithms, it makes sense to test them on the same data.  So, we want the randomly generated array used in one sorting method to be the same randomly generated array used in another.  This can be done by 'seeding' the random number generator, so that using this seed, the generator will create the same random numbers in the same order.  Seeding the random number function can be done with the %srand()% function.  You *only want to seed once*.  That is to say you don't want to seed each time you create a new random number, but just once before the number creation process starts.
-
-Another issue we need to deal with in this lab is constraining our random numbers to a certain range of possible numbers. In the lab description, we are given that the random numbers should be less than or equal to 100 and greater than or equal to 0.  This can be done using the modulus operator as shown in the example code below.  According to various c++ forums, random number generator can be of very low quality depending on the compiler you are using.  Thus, this might result in predictable patterns if you are using a small enough maximum size.  With our case, 100 should be large enough to get a decent random mixture.
+Simple random numbers can be created with the @rand()@ function.  This is part of the @cstdlib@ library.Because we are comparing multiple sorting algorithms, it makes sense to test them on the same data.  So, we want the randomly generated array used in one sorting method to be the same randomly generated array used in another.  This can be done by 'seeding' the random number generator, so that using this seed, the generator will create the same random numbers in the same order.  Seeding the random number function can be done with the @srand()@ function.  You *only want to seed once*.  That is to say you don't want to seed each time you create a new random number, but just once before the number creation process starts.
 
 Another, more complicated method is also given below, which is supposedly immune to the possible pattern generation of the simple mod method.  This method divides the randomly generated number by the maximum possible value for randomly generated numbers, creating a number from 0 to 1.  This is then multiplied by the number of integers between the min and max number and added to the minimum number.  The code is slightly more complicated than the description I give, but thats the short of it.
 
@@ -25,6 +23,7 @@ h4. Simple Modulus Method
 
 <pre>
   <code>
+    #include <cstdlib>
     srand(123);   //seed the random number generator
     int highest = 100;
     int lowest = 0;
@@ -36,6 +35,7 @@ h4. More Complicated Method
 
 <pre>
   <code>
+    #include <cstdlib>
     srand(123);   //seed the random number generator
     int highest = 100;
     int lowest = 0;
@@ -48,31 +48,45 @@ Probably either one of these will work for our purposes, people just seem to lea
 
 h2. Timing 
 
-Timing code execution can be done in C++ using the %ctime% library.  
+Timing code execution can be done in C++ using the @ctime@ library.  
 
-This example is taken directly from "This Site":http://www.juniata.edu/faculty/kruse/cs315/cs315Timing.htm
-
-h3. Timing: Example code
+h3. Example code
 
 <pre>
   <code>
-    #include <ctime>;
-
-    clock_t start,finish;
-    double time;
-    start = clock();
-
-    //sort something
-
-    finish = clock();
+    #include <sys/time.h>
     
-    time = (double(finish)-double(start))/CLOCKS_PER_SEC;
+    // Used to get the time of day for timing comparisons.
+    unsigned long getTime()
+    {
+      timeval tv;
+      gettimeofday (&tv, NULL);
+      return tv.tv_sec * 1000000ul + tv.tv_usec;
+    }
   </code>
 </pre>
 
-Here, the @clock()@ function returns the number of clock ticks elapsed since the program was launched.  So we first take the clock ticks before the sort algorithm.  Then we take the clock ticks again after the code we are interested in has completed.  Subtracting these two numbers gives us the number of ticks that the algorithm took to complete.  %CLOCKS_PER_SEC% holds the conversion rate from clock ticks to seconds.  So we divide by this number to get the total seconds taken.  
+Here is the function being used:
 
-You could also leave the number in clock ticks - as long as you perform all your experiments on the same machine.  
+<pre>
+  <code>
+    unsigned long start;
+    unsigned long finish;
+    
+    start= getTime();
+
+    // do something
+
+    finish = getTime();
+    unsigned long totalTime = finish - start;
+  </code>
+</pre>
+
+In the @getTime@ function, we utilize the @gettimeofday@ function passing in a @timeval@ struct that is modified to contain the current time.  Inside this struct we have two values: @tv_sec@ which holds the number of seconds passed since January 1, 1970, and @tv_usec@, the number of microseconds.  We return the summation of the number of seconds passed, converted to microseconds, and the number of microseconds passed.
+
+Check out the man page for @gettimeofday@ for more information.
+
+h3. Timing Considerations
 
 Other applications running, and other issues might affect the performance of these algorithms.  This is why it would probably be in your best interest to keep the conditions of your computer as static as possible when running these tests. 
 
@@ -82,11 +96,11 @@ Remember, only include the sorting in your timing tests.  *Don't include the arr
 
 h2. Other Notes
 
-The file %SelectionSort.cpp% has the typedef statement used in all the other sorting algorithms, so in your main file, include it before any of the others. 
+The file @SelectionSort.cpp@ has the typedef statement used in all the other sorting algorithms, so in your main file, include it before any of the others. 
 
 Use the _strcomp() == 0_ method if you want to leave your input arguments as c strings.
 
-The Selection sort file includes two functions 'indexOfLargest' and 'swap' that need to be declared before the 'selectionSort' function.
+The Selection sort file includes two functions @indexOfLargest@ and @swap@ that need to be declared before the @selectionSort@ function.
 
 The Merge sort has a maximum integer size that you can modify to be the maximum value needed for these experiments.
 
@@ -108,11 +122,10 @@ A shell script starts with a line indicating the interpreter program that will e
 
 Then we can add lines to the file, each one will be executed as if they were typed in from the command prompt.
 
-Ex:
-
 <pre>
 <code>
   ./lab06 250 random selection >> select_out.txt
+  ./lab06 500 random selection >> select_out.txt
 </code>
 </pre>
 
